--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -172,6 +172,7 @@ service time_daemon /system/bin/time_daemon
    class late_start
    user root
    group root
+   disabled
 
 service imsqmidaemon /system/bin/imsqmidaemon
     class main
